--- a/style.css
+++ b/style.css
@@ -40,6 +40,11 @@
     background-color: #F7F7F7;
 }
 
+#count{
+    background-color:  #2c3e50;
+    color: white;
+}
+
 .btn{
     background-color: #18BC9C;
     height: 30px;
@@ -683,7 +688,6 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-   color: skyblue;
+   color: white;
 
-    
-}
+} 
